--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
 }
 .logo-principal{
     border-radius: 50%;
-margin-left: 0px;
+margin-left: 150px;
 
 }
 .legenda{
@@ -51,3 +51,76 @@ margin-left: 0px;
   display: flex;
   align-items: center;
 }
+
+.search-container {
+      display: flex;
+      align-items: center;
+      width: 500px;
+      height: 50px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 0 15px;
+      background-color: white;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+      margin-left: 20px;
+    }
+
+    .search-container input {
+      flex: 1;
+      border: none;
+      outline: none;
+      font-size: 16px;
+      color: #333;
+    }
+
+    .search-container input::placeholder {
+      color: #999;
+    }
+
+    .search-container .icon {
+      color: #666;
+      font-size: 20px;
+      cursor: pointer;
+    }
+
+
+     body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color:rgb(98, 224, 255) ;
+      color: #fff;
+    }
+
+    .promo-container {
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      padding-left: 80px;
+      background-color:rgb(98, 224, 255) ;
+    }
+
+    .promo-text {
+      max-width: 500px;
+    }
+
+    .promo-text h1 {
+      font-size: 48px;
+      line-height: 1.2;
+      font-weight: bold;
+      margin: 0;
+    }
+
+    .highlight {
+      background-color: #fe0000;
+      padding: 5px 10px;
+      display: inline-block;
+      color: white;
+    }
+    
+    .logo-redonda{
+      border-radius: 50%;
+      
+      padding-left: 90px;
+    }
